MDEV-32454 JSON test has problem in view protocol.

Few Item_func_json_xxx::fix_length_and_dec() functions fixed.